force-app/main/default/objects/Dashboard_View__c/Dashboard_View__c.object-meta.xml
<CustomObject>
    <description>Saved Dynamic KPI Dashboard views. Each record stores a full dashboard configuration (filters, selected metrics, chart settings) as JSON, letting users save and reuse their custom layouts.</description>
    <label>Dashboard View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>