force-app/main/default/objects/Dashboard_View__c/fields/Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Configuration_JSON__c</fullName>
    <description>Serialized JSON of the dashboard state (filters, selected metrics, chart configs, etc.). Managed by the Dynamic KPI Dashboard LWC.</description>
    <label>Configuration JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>