force-app/main/default/objects/Dashboard_View__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description shown in the view picker tooltip.</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>