force-app/main/default/objects/Dashboard_View__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Optional SLDS icon name shown alongside the view in the picker (e.g., utility:chart).</description>
    <label>Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>