force-app/main/default/objects/Dashboard_View__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this is the owner&apos;s default view that loads automatically when the dashboard opens. Only one view per owner can be default.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>