force-app/main/default/objects/Dashboard_View__c/fields/Is_Shared__c.field-meta.xml
<CustomField>
    <fullName>Is_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the view is visible to all users. When false, only the owner can see it.</description>
    <label>Is Shared</label>
    <type>Checkbox</type>
</CustomField>