force-app/main/default/objects/Dashboard_View__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>The user who created this view. Only the owner can edit/delete it.</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dashboard Views</relationshipLabel>
    <relationshipName>Dashboard_Views</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>